fixed visibility of text on hero image

--- a/css/custom.css
+++ b/css/custom.css
@@ -47,6 +47,7 @@ header .intro-text .intro-lead-in {
   font-size: 22px;
   line-height: 22px;
   margin-bottom: 25px;
+    text-shadow: 2px 2px 3px grey;
 }
 header .intro-text .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -55,6 +56,7 @@ header .intro-text .intro-heading {
   font-size: 50px;
   line-height: 50px;
   margin-bottom: 25px;
+    text-shadow: 2px 2px 3px grey;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -89,11 +91,11 @@ header .intro-text .intro-heading {
 }
 
 
-/* Resume section */
+/* Resume section 
 .timeline > li .timeline-panel {
     padding: 0 20px 20px 20px;
 }
 
 .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 20px 20px 20px;
-}
+}*/
